# voxi-core

./: .gitignore  Cargo.toml  README.md
.lh/src/selections/: mod.rs.json
src/: lib.rs
src/builder/: args_resolver_binds.rs  args_resolver_string.rs  mod.rs
src/error/: mod.rs  sql_error.rs
src/errors/: core_error.rs  mod.rs  sql_error.rs
src/objects/: field_type_descriptor.rs  mod.rs  sub_set_values.rs  value_json.rs
src/resolvers/: args_resolver.rs  args_resolver_binds.rs  args_resolver_string.rs
src/selections/: agg_functions.rs  alias.rs  bind_name.rs  combination.rs  condition_where.rs  field_attribs.rs  fields_attribs.rs  from.rs  group_by.rs  join.rs  limit_offset.rs  logical_expr_where.rs  macros.rs  mod.rs  order_by.rs  orders.rs  query.rs  select.rs  single_select.rs  string_functions.rs  table.rs  table_field.rs  table_field_alias.rs  table_name.rs  tables_names.rs  to_sql.rs  value_select.rs  value_select_attrib.rs  value_select_name.rs  value_type_scale.rs  value_where.rs  value_where_type.rs  values_select.rs  values_where.rs
src/selections/arithmetic_expr/: arithmetic_expr_add.rs  arithmetic_expr_div.rs  arithmetic_expr_mul.rs  arithmetic_expr_sub.rs  arithmetic_expr_where.rs  mod.rs
src/selections/case/: case_condition.rs  case_value.rs  mod.rs  when_condition.rs  when_value.rs
src/values/: error.rs  field_name.rs  field_name_type.rs  formats.rs  into_value.rs  local_foreign_field.rs  mod.rs  null_value.rs  nullable_value.rs  table_field_type.rs  typed_option_value.rs  util.rs  value.rs  value_boolean.rs  value_decimal.rs  value_int32.rs  value_int64.rs  value_json.rs  value_naive_date.rs  value_naive_date_time.rs  value_string.rs  value_type.rs  value_uuid.rs
