[package]
name = "voxi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33.1", features = ["maths"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "=1.0.106"
derive_more = "0.99.17"

# voxi sql dependencies
error-stack = { version = "0.4.1", features = [
    "spantrace",
    "anyhow",
], optional = true }
log = { version = "0.4", optional = true }
dyn-clonable = { version = "0.9", optional = true }

[dev-dependencies]
rust_decimal_macros = "1.25"
pretty_assertions = "1.3"

[features]
sql = ["dep:error-stack", "dep:log", "dep:dyn-clonable"]
objects = ["dep:log"]
default = ["sql", "objects"]
