[package]
name = "voxi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34.3", features = ["serde", "maths"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = { version = "1.0.111", features = ["raw_value"] }
derive_more = "0.99.17"
serde_with = { version = "3.5.1", features = ["json"] }
error-stack = { version = "0.5.0", features = [
    "spantrace",
    "anyhow",
    "serde",
], optional = true, path = "../../hash/libs/error-stack" }

# voxi sql dependencies
log = { version = "0.4", optional = true }
dyn-clonable = { version = "0.9", optional = true }

[dev-dependencies]
rust_decimal_macros = "1.25"
pretty_assertions = "1.3"

[features]
# sqlx = ["dep:sqlx"]
sql = ["dep:error-stack", "dep:log", "dep:dyn-clonable"]
objects = ["dep:log"]
default = ["sql", "objects"]
