[package]
name = "voxi-core"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.13.1", default-features = false, features = [
    "js",
    "v4",
    "serde",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.13.1", default-features = false, features = [
    "v4",
    "serde",
] }


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34.3", features = ["serde", "maths"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = { version = "1.0.134", features = ["raw_value", "preserve_order"] }
derive_more = "0.99.17"
serde_with = { version = "3.5.1", features = [
    "indexmap",
    "indexmap_2",
    "json",
] }
error-stack = { version = "0.5.0", features = [
    "spantrace",
    "anyhow",
    "serde",
], optional = true, path = "../../hash/libs/error-stack" }

# voxi sql dependencies
log = { version = "0.4", optional = true }
dyn-clonable = { version = "0.9", optional = true }
indexmap = { version = "2.7.0", features = ["serde"] }

[dev-dependencies]
rust_decimal_macros = "1.25"
pretty_assertions = "1.3"

[features]
# sqlx = ["dep:sqlx"]
sql = ["dep:error-stack", "dep:log", "dep:dyn-clonable"]
objects = ["dep:log"]
default = ["sql", "objects"]
